# simplegames

./: .gitignore  .gitmodules  2048.py  2048_client.py  2048_client2.py  2048_server3.py  2048_server5.py  AUTOPLAY_SOLVER_PATTERNS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  game_levels.md  minesweeper.py  play-all-auto.sh  play-all.sh  playing_game_with_ai.md  pyproject.toml  todo.md  unity-port.md
2048/: 2048-solver-claude-enhanced-o1-copilot.py  2048-solver-claude-enhanced-optimized.py  2048-solver-claude-enhanced.py  2048.py  2048_client.py  2048_server.py  2048_server2.py  2048_solver.py  2048_solver3.py  2048_solver_multi2.py  main.py  pyproject.toml  readme.txt  server.py  test_2048.py
asteroid/: asteroid.md  asteroid.py
bricks/: bricks.md  bricks.py  bricks_all.py
chess/: chess_autoplay.py  chess_player.py  readme.txt
chess-game/: README.md  main.py
flappybird/: flappy_bird.py  flappybird.md
gameoflife/: gameoflife.md  gameoflife.py
genetic_car/: genetic_car.md  genetic_car.py  saved_genome.json
mazes/: grid_maze.md  grid_maze.py  hexagonal_maze.md  hexagonal_maze.py
minesweeper/: documentation.md  minesweeper.py  minesweeper2.py  minesweeper_with_probability.py  minesweeper_with_probability2.py  minesweeper_with_solver.py  readme.txt  solver.md
pong/: pong.py  readme.md
rubiks_cube/: rubiks_cube.md  rubiks_cube.py  rubiks_cube_3d.py
slidergame/: Makefile  Sliding_Puzzle_PRD.md  TestSolver.swift
snake/: multi-snake.md  multi-snake.py  snake-grok3.py  snake.md  snake.py
snake game/: snake.py
sudoku/: main.py  (+2 more)
(+343 files in other folders)
